modified section1 color

--- a/src/components/prohight.css
+++ b/src/components/prohight.css
@@ -1,17 +1,17 @@
-.sticky-section {
-  position: sticky;
+
+
+.sticky-section { position: sticky; 
   top: 0;
-  min-height: 100%;
-  background: linear-gradient(to right, #fbbf24, #b45309) !important; 
-  color: white !important;
-}
-.sticky-section1{
-  position: sticky;
-  top: 0;
-  min-height: 100%;
-  background: linear-gradient(to right, #b45309, #fbbf24) !important; 
-  color: white !important;
-}
+   min-height: 100%;
+   background: linear-gradient(  135deg,
+    #f5f5dc 0%,   /* beige base */
+    #fff8dc 15%,  /* cornsilk glow */
+    #ffec8b 35%,  /* light gold */) !important;
+     color: black !important; } 
+.sticky-section1{ position: sticky;
+   top: 0; min-height: 100%; 
+   background: linear-gradient(135deg,#fbbf19, #d97706) !important;
+    color: white !important; }
 
 .section-stack {
   position: relative;
